src/style.css
* {
    margin: 0; 
    padding: 0;
}

#experience .webgl {
    position: fixed; 
}

#experience .loading.overlay
{  
    pointer-events: none;
    position: fixed;
    display: flex;
    justify-content: flex-start;
    align-items: flex-end;
    padding: 20px;
    z-index: 2;
    height: 100vh; 
    width: 100vw; 
    color: white; 
    background-color: black;
    font-family: Helvetica neue, Arial, sans-serif;
    font-size: 16em; 
    font-weight: bold;
    font-style: italic;
}

#ui-overlay {
    position: fixed; 
    z-index: 3; 
}

#ui-overlay #blocker {
    position: absolute; 
    width: 100vw; 
    height: 100vh;
    color: white; 
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 4; 
}

#ui-overlay #blocker #instructions {
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: helvetica neue; 
}

#ui-overlay #blocker .full-screen, .sound {
    width: 25px; 
    height: 25px; 
    background-color: rgba(0, 0, 0, 0.1);
    border: none; 
    top: 0; 
    left: 0; 
    margin: 20px; 
    cursor: pointer; 
}

#ui-overlay #blocker #controls {
    position: absolute; 
    top: 0%; 
    left: 0%; 
    background-color: rgba(0, 0, 0, 0);
    display: flex;
    flex-direction: row;
    justify-content: left;
    align-items: center;
}

#ui-overlay #blocker #controls img {
    width: 100%; 
    height: 100%; 
    color: white; 
    background-color: rgba(0, 0, 0, 0);
}


#ui-overlay #orbit-objects .toggleButton {
    display: none; /* Ensure it's visible */
    position: fixed;
    color: white;
    margin: 0;
    background-color: rgba(0, 0, 0, 1); /* Semi-transparent background */
    padding: 10px 20px; /* Add padding for better spacing */
    border-radius: 0px; /* Rounded corners */
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
    bottom: 20px; /* Place near the top */
    left: 20px; /* Align closer to the corner */
    font-size: 16px; /* Adjust font size for better readability */
    z-index: 10;
    border: 0px solid white; /* Add a border for visibility */
    cursor: default; /* No pointer interaction */
}

#ui-overlay #orbit-objects .toggleButton img
{
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#ui-overlay #orbit-objects .info
{
    margin: 100px 10px;
    color: white;
    display: none;
    padding: 20px; 
    width: 200px;
    height: 200px;
    background-color: rgba(0, 0, 0, 0);
}

#ui-overlay #orbit-objects .info.active
{
display: block;
}

#ui-overlay #mobile-blocker {
    display: none;
} 

@media (max-width: 1024px) {
    #mobile-blocker {
        z-index: 2; 
        display: block;
        position: absolute; 
        width: 100vw; 
        height: 100vh; 
        background-color: black; 
        color: white; 
        text-align: center;
        display: flex;
        justify-content: center;
        align-items: center;
        font-family: Helvetica, Arial, Helvetica, sans-serif;
    }

    #blocker, #experience
    {
        display: none; 
    }
}

